# topolink

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb  test.py
docs/: conops.html  index.html  search.js  src.html  topolink.html
docs/src/: conops.html
examples/: dp_mechanism.ipynb  laplacian.ipynb  multi_graphs.ipynb  multi_node.ipynb  node.py  quantize.ipynb  server.py  weighted_matrix.ipynb
examples/experimental/: combine_maps.ipynb
examples/gossip/: node.ipynb  server.ipynb
examples/gossip/results/: 1.npy  2.npy  3.npy  4.npy  5.npy
examples/multi_node/: .gitignore  README.md  node.py
examples/notebooks/: dp_mechanism.ipynb  laplacian.ipynb  map_consensus.ipynb  mixing_matrix.ipynb  multi_graphs.ipynb  node.ipynb  quantize.ipynb  server.ipynb  weighted_matrix.ipynb
examples/notebooks/laplacian/: node.ipynb  server.ipynb
examples/notebooks/mixing_matrix/: node.ipynb  server.ipynb
examples/scripts/: README.md  node.py  server.py
examples/sync/: README.md  node.py  server.py
scripts/manual_multi_node/: graph.py
src/conops/: __init__.py  bootstrap_.py  discovery.py  graph.py  node_handle.py  transform.py  types.py  utils.py
src/topolink/: __init__.py  bootstrap_.py  config.py  discovery.py  exceptions.py  graph.py  node_handle.py  topology.py  transform.py  types.py  utils.py
