[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conops"
version = "0.1.0"
description = "A Python package for distributed consensus operations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rui Huang", email = "ruihuang0421@gmail.com" }]
dependencies = ["numpy>=2.2.6", "pyzmq>=27.0.0", "zeroconf>=0.148.0"]

[project.optional-dependencies]
notebook = ["ipykernel>=6.29.5"]
examples = ["matplotlib>=3.10.3", "networkx>=3.4.2", "ray[default]>=2.53.0"]

[tool.setuptools.packages.find]
where = ["src"]
